# pyhelp

./: .coveragerc  .gitignore  CMakeLists.txt  LICENSE  README.md  appveyor.yml  meson.build  pyproject.toml  requirements-dev.txt  requirements.txt  runtests.py  setup.cfg  setup.py
.github/workflows/: python-test.yml
docs/: about.rst  conf.py  data.rst  example.rst  help_manager.rst  help_output.rst  index.rst  installation.rst  managers.rst  meteo_manager.rst  references.rst  technical_documentation.rst
example/: airtemp_input_data.csv  help_example.py  obs_yearly_river_flow.csv  precip_input_data.csv  solrad_input_data.csv
help/: HELP3O.FOR  help_utils.py
pyhelp/: HELP3O.FOR  HELP3O.cp36-win_amd64.pyd  __init__.py  bilan.py  help_utils.py  managers.py  maps.py  output.py  postprocessing.py  preprocessing.py  processing.py  produce_help_maps.py  produce_meteo_maps.py  produce_water_budget.py  utils.py  weather_reader.py
pyhelp/scripts/: __init__.py  compare_sim_vs_obs_river_flow.py  download_solrad_data_from_cds.py  example_pyhelp_calc_yearly_values.py  example_pyhelp_outputs_v0.3.py  grid_data_extractor.py  obs_yearly_river_flow.csv  plot_weather_avg.py  postprocess_tair_moy.py  produce_meteo_maps.py  produce_water_budget.py
pyhelp/tests/: test_help3o.py  test_helpmanager.py  test_read_input_files.py  test_reproducibility.py
pyhelp/tests/HELPORIG/: HELP3ORIG.FOR  README.md
pyhelp/tests/data/: airtemp_input_data_2001-2002.csv  airtemp_input_data_2001.csv  airtemp_input_data_2002-2003.csv  airtemp_input_data_incomplete.csv  precip_input_data_2001-2002.csv  precip_input_data_2001.csv  precip_input_data_2002-2003.csv  precip_input_data_incomplete.csv  solrad_input_data_2001-2002.csv  solrad_input_data_2001.csv  solrad_input_data_2002-2003.csv  solrad_input_data_incomplete.csv
pyhelp/tests/rca_original_testcase_1997/: RCRA.D10  RCRA.D11  RCRA.D13  RCRA.D4  RCRA.D7  RCRA.OUT  README.md
recipe/: bld.bat  conda_build_config.yaml  meta.yaml
